# freeciv.andrewmcgrath.info

./: .env.sample  .gitignore  CLAUDE.md  Dockerfile  HOWTO-PROVISION-PLAYERS.md  Makefile  README.md  change_gold.sh  crontab  database.lua  entrypoint.sh  fcdb.conf  fix_turn_timer.sh  fly.toml  generate_dashboard.sh  generate_gazette.sh  generate_nations.sh  generate_status_json.sh  lib_diplomacy.sh  lib_log.sh  local_preview.sh  longturn.serv  manage_players.sh  mock-server.py  players.conf.sample  preview_email.sh  respond_to_editor.sh  start.sh  test_diplomacy_classify.sh  test_generate_status.sh  test_turn_notify.sh  turn_notify.lua  turn_notify.sh  turn_reminder.sh
.github/: FUNDING.yml
patches/: apply-CVE-2026-33250.sh
python/: Dockerfile.dev  Makefile  pyproject.toml
python/lib/: attendance.py  dashboard.py  diplomacy.py  freeciv_save.py  gazette_v2.py  history.py  status.py
python/tests/: conftest.py  test_attendance.py  test_dashboard.py  test_diplomacy.py  test_freeciv_save.py  test_gazette_v2.py  test_history.py  test_status.py
python/tests/fixtures/: gazette-v2-sample.json
test_data/: fcdb_auth.sql  freeciv.sqlite  last_seen.txt  turn_start_epoch
www/: admin.html  changelog.html  dashboard.html  editor.html  index.html  login.html
www/cgi-bin/: dashboard-data  editor-messages  health
www/css/: gazette.css
