[project]
name = "freeciv-longturn-tools"
version = "0.1.0"
description = "Python rewrite of the JSON-builder scripts (status, dashboard, diplomacy, attendance, history)"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.setuptools.packages.find]
where = ["."]
include = ["lib*"]
